--- a/index.html
+++ b/index.html
@@ -2,66 +2,175 @@
 	<head>
 		<title>P&I’s best places to work 2017</title>
 
+
 		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/bootstrap-table.js"></script>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script> 
+		<script src="http://cdn.datatables.net/1.10.5/js/jquery.dataTables.min.js"></script> 
+		<script type="text/javascript" src="js/jquery.tooltip.js"></script>
+		
+		<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css"> 
+		<link rel="stylesheet" type="text/css" href="http://www.pionline.com/assets/special-report-pages/2015-ceo-pay/styles.css"> 
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+		<style type="text/css">
+			body{ font-family: 'Open Sans', sans-serif; max-width: 720px;}
+			#footnote{ font-size: 10px; padding: 0;}
+			.tooltip {
+				position: absolute;
+				display: none;
+				border: 1px solid #333;
+				background: #BDCDFF;
+				padding: 5px 20px;
+				color: #333;
+				border-radius: 5px;
+				-webkit-border-radius: 5px;
+				-moz-border-radius: 5px;
+			}
+		</style>
 	</head>
 	<body>
 		<img src="img/PI_BestPlacestoWork_2017.jpg" alt="Title Logo" style="float:left">
-<!-- 	    <table id="table"
-           data-toolbar="#toolbar"
-           data-search="true"
-           data-show-refresh="true"
-           data-show-toggle="true"
-           data-show-columns="true"
-           data-show-export="true"
-           data-detail-view="true"
-           data-detail-formatter="detailFormatter"
-           data-minimum-count-columns="2"
-           data-show-pagination-switch="true"
-           data-pagination="true"
-           data-id-field="id"
-           data-page-list="[10, 25, 50, 100, ALL]"
-           data-show-footer="false"
-           data-side-pagination="server"
-           data-url="/examples/bootstrap_table/data"
-           data-response-handler="responseHandler">
-    	</table> -->
-    	<table id="table">
-    		<thead>
-    			<tr>
-    				<th data-field="state" rowspan="2">State</th>
-    				<th data-field="id" rowspan="2">State</th>
-				</tr>
+		<table id="example1" class="display" cellspacing="0" width="100%">
+		<thead>	
+			<tr><th>Company</th><th>Location</th><th>Category</th><th>No. of years won</th></tr>	
+		</thead>
+		<tbody>	
+				<tr><th>361 Capital</th><th>Denver</th><th>Small employers</th><th>2</th></tr>
+				<tr><th>AAM Insurance Investment Management</th><th>Chicago</th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Abbott Capital Management</th><th></th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Acadian Asset Management</th><th></th><th>Large employers</th><th>1</th></tr>
+				<tr><th>Adviser Investments</th><th>Newton</th><th>Medium employers</th><th>2</th></tr>
+				<tr><th>AEW Capital Management</th><th></th><th>Large employers</th><th>2</th></tr>
+				<tr><th>AFL-CIO Housing Investment Trust</th><th>Washington</th><th>Medium employers</th><th>1</th></tr>
+				<tr><th>Aksia</th><th>New York</th><th>Medium employers</th><th>3</th></tr>
+				<tr><th>AQR Capital Management</th><th>Greenwich</th><th>Major employers</th><th>1</th></tr>
+				<tr><th>Ariel Investments</th><th>Chicago</th><th>Medium employers</th><th>1</th></tr>
+				<tr><th>Arrowpoint Partners</th><th></th><th>Medium employers</th><th>2</th></tr>
+				<tr><th>Babson Capital Management</th><th></th><th>Large employers</th><th>3</th></tr>
+				<tr><th>Baird Asset Management</th><th>Milwaukee</th><th>Medium employers</th><th>6</th></tr>
+				<tr><th>Balentine</th><th>Atlanta</th><th>Small employers</th><th>4</th></tr>
+				<tr><th>Ballentine Partners, LLC</th><th>Waltham</th><th>Medium employers</th><th>1</th></tr>
+				<tr><th>The Blackstone Group</th><th>New York</th><th>Super employers</th><th>4</th></tr>
+				<tr><th>BlackRock Inc.</th><th>New York</th><th>Super employers</th><th>4</th></tr>
+				<tr><th>Brandywine Global Investment Management</th><th>Philadelphia</th><th>Large employers</th><th>3</th></tr>
+				<tr><th>Bridgewater Associates</th><th></th><th>Super employers</th><th>1</th></tr>
+				<tr><th>Bridgeway Capital Management</th><th>Houston</th><th>Small employers</th><th>3</th></tr>
+				<tr><th>California State Teachers' Retirement System</th><th>West Sacramento</th><th>Large employers</th><th>3</th></tr>
+				<tr><th>Caltius Capital Management</th><th></th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Campbell & Co.</th><th>Baltimore</th><th>Large employers</th><th>3</th></tr>
+				<tr><th>Capital Investment Companies</th><th>Raleigh</th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Cardinal Investment Advisors</th><th>Chicago</th><th>Small employers</th><th>3</th></tr>
+				<tr><th>Cassaday & Co.</th><th></th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Charles Schwab Investment Management</th><th>San Francisco</th><th>Large employers</th><th>2</th></tr>
+				<tr><th>ClearBridge Investments</th><th>New York</th><th>Large employers</th><th>6</th></tr>
+				<tr><th>Cornerstone Advisors Asset Management, Inc.</th><th>Baltimore</th><th>Small employers</th><th>2</th></tr>
+				<tr><th>Cramer Rosenthal McGlynn, LLC</th><th>New York</th><th>Medium employers</th><th>1</th></tr>
+				<tr><th>Dana Investment Advisors</th><th></th><th>Small employers</th><th>6</th></tr>
+				<tr><th>Diversified</th><th></th><th>Super employers</th><th>1</th></tr>
+				<tr><th>DRA Advisors LLC</th><th>New York</th><th>Medium employers</th><th>1</th></tr>
+				<tr><th>Edelman Financial Services</th><th></th><th>Large employers</th><th>1</th></tr>
+				<tr><th>Falcon Investment Advisors</th><th></th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Fiduciary Investment Advisors</th><th></th><th>Medium employers</th><th>3</th></tr>
+				<tr><th>Fort Washington Investment Advisors</th><th>Cincinnati</th><th>Large employers</th><th>4</th></tr>
+				<tr><th>Garcia Hamilton & Associates</th><th>Houston</th><th>Small employers</th><th>2</th></tr>
+				<tr><th>Hamilton Lane Advisors</th><th></th><th>Large employers</th><th>6</th></tr>
+				<tr><th>Harrison Street Real Estate Capital</th><th></th><th>Medium employers</th><th>4</th></tr>
+				<tr><th>Heitman</th><th></th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Highland Associates</th><th>Birmingham</th><th>Small employers</th><th>2</th></tr>
+				<tr><th>Highland Capital Management</th><th>Dallas</th><th>Large employers</th><th>2</th></tr>
+				<tr><th>Income Research + Management</th><th>Boston</th><th>Large employers</th><th>2</th></tr>
+				<tr><th>Innovest Portfolio Solutions</th><th>Denver</th><th>Small employers</th><th>3</th></tr>
+				<tr><th>INTECH Investment Management</th><th>West Palm Beach</th><th>Medium employers</th><th>5</th></tr>
+				<tr><th>Intercontinental Real Estate Corporation</th><th>Boston</th><th>Large employers</th><th>2</th></tr>
+				<tr><th>Invesco</th><th></th><th>Super employers</th><th>4</th></tr>
+				<tr><th>L&B Realty Advisors</th><th></th><th>Small employers</th><th>1</th></tr>
+				<tr><th>LaSalle Investment Management</th><th>Chicago</th><th>Large employers</th><th>3</th></tr>
+				<tr><th>Legg Mason</th><th>Baltimore</th><th>Major employers</th><th>3</th></tr>
+				<tr><th>Los Angeles Capital Management</th><th>Los Angeles</th><th>Medium employers</th><th>4</th></tr>
+				<tr><th>Mesirow Financial Holdings</th><th></th><th>Super employers</th><th>2</th></tr>
+				<tr><th>Modera Wealth Management</th><th>Westwood</th><th>Medium employers</th><th>3</th></tr>
+				<tr><th>MRA Associates</th><th>Phoenix</th><th>Small employers</th><th>2</th></tr>
+				<tr><th>National Real Estate Advisors</th><th>Washington</th><th>Medium employers</th><th>3</th></tr>
+				<tr><th>Neuberger Berman Group</th><th>New York</th><th>Super employers</th><th>5</th></tr>
+				<tr><th>Northern Trust Asset Management</th><th></th><th>Major employers</th><th>2</th></tr>
+				<tr><th>OppenheimerFunds</th><th>New York</th><th>Super employers</th><th>2</th></tr>
+				<tr><th>Pacific Alternative Asset Management Co. </th><th></th><th>Small employers</th><th>2</th></tr>
+				<tr><th>Parnassus Investments</th><th>San Francisco</th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Penserra</th><th>ORINDA</th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Perkins Investment Management</th><th></th><th>Small employers</th><th>3</th></tr>
+				<tr><th>Polen Capital Management</th><th>Boca Raton</th><th>Small employers</th><th>2</th></tr>
+				<tr><th>Principal Global</th><th>Des Moines</th><th>Super employers</th><th>6</th></tr>
+				<tr><th>Resource Consulting Group</th><th>Orlando</th><th>Small employers</th><th>2</th></tr>
+				<tr><th>The Sanibel Captiva Trust Company</th><th></th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Satori Capital</th><th></th><th>Small employers</th><th>3</th></tr>
+				<tr><th>SEI Investments</th><th>Oaks</th><th>Super employers</th><th>5</th></tr>
+				<tr><th>Semper Capital Management</th><th>New York</th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Spectrum Investment Advisors, Inc.</th><th>Mequon</th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Standard Life Investment USA</th><th></th><th>Medium employers</th><th>3</th></tr>
+				<tr><th>SunTrust Institutional Investments</th><th></th><th>Medium employers</th><th>1</th></tr>
+				<tr><th>T. Rowe Price Associates Inc.</th><th>Baltimore</th><th>Super employers</th><th>2</th></tr>
+				<tr><th>TCW Group Inc.</th><th>Los Angeles</th><th>Major employers</th><th>4</th></tr>
+				<tr><th>Tortoise Capital Advisors</th><th>Leawood</th><th>Large employers</th><th>4</th></tr>
+				<tr><th>Transamerica Retirement Solutions</th><th></th><th>Super employers</th><th>2</th></tr>
+				<tr><th>Voya Investment Management</th><th>New York</th><th>Major employers</th><th>3</th></tr>
+				<tr><th>Vulcan Value Partners</th><th>Birmingham</th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Western Asset Management</th><th>Pasadena</th><th>Major employers</th><th>5</th></tr>
+				<tr><th>Westwood Holdings Group Inc.</th><th>Dallas</th><th>Large employers</th><th>4</th></tr>
+				<tr><th>WisdomTree Asset Management</th><th>New York</th><th>Large employers</th><th>3</th></tr>
+				<tr><th>William Blair Investment Management</th><th>Chicago</th><th>Large employers</th><th>5</th></tr>	
+		</tbody>
+<!-- END OF TABLE CONTENT -->
 
+</table>
 
-			</thead>
-			<tbody>
-			</tbody>
-		</table>
+<div id="tooltip" style="display: none; top: 538px; left: 261px; right: auto;"></div>
+
+<div class="tooltip_templates">
+    <span id="tooltip_content">
+        <strong>This is the content of my tooltip!</strong>
+    </span>
+</div>
 
 	<script type="text/javascript">
-		$(function() {
-			var $table = $('#table');
-			$('#table').bootstrapTable({
-				columns:[
-				{                
-	                field: 'state',
-	                checkbox: true,
-	                rowspan: 2,
-	                align: 'center',
-	                valign: 'middle'
-				}, 
-				{
-	                title: 'Item ID',
-	                field: 'id',
-	                rowspan: 2,
-	                align: 'center',
-	                valign: 'middle',
-	                sortable: true
-	            }]
-			});
-		});
+		var data = [
+		{
+			"name":"123"
+		}
+		];
+	    $('#example1 tbody tr').each( function() {
+	        var sTitle;
+	        var nTds = $('th', this);
+	        var companyName = $.trim($(nTds[0]).text());
+	        console.log("print  companyName" + companyName);
+	        var sGrade = $(nTds[4]).text();
+	         
+	        if ( companyName == "361 Capital" )
+	            sTitle =  ' will provide a first class (A) level of CSS support.';
+	        else
+	            sTitle = ' will provide an undefined level of CSS support.';
+	         
+	        this.setAttribute( 'title', sTitle );
+    	} );
+
+
+		$(document).ready(function() { 
+			var dataTable = $('#example1').DataTable({ 							
+				"bLengthChange": 		false	,				
+				"paging": 		false	,				
+				"order": 		[[ 0, 'asc' ]]	,	//(n)th column; 'asc' or 'desc'			
+				"bInfo" : 		false					
+ 			});
+    		dataTable.$('tr').tooltip( {
+			    "delay": 0,
+			    "track": true,
+			    "fade": 250
+    		} );
+
+		} );
+
+
+
 	</script>
 	</body>
 </html>
