Final product without further tweak

--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <html>
 	<head>
-		<title>P&I’s best places to work 2017</title>
-
-
-		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-		<script type="text/javascript" src="js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="js/bootstrap-table.js"></script>
+		<title>P&I’s best places to work 2017</title>>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script> 
 		<script src="http://cdn.datatables.net/1.10.5/js/jquery.dataTables.min.js"></script> 
 		<script type="text/javascript" src="js/jquery.tooltip.js"></script>
@@ -22,13 +17,25 @@
 				position: absolute;
 				display: none;
 				border: 1px solid #333;
-				background: #BDCDFF;
+				background: #009d40;
+				opacity: 0.1;
 				padding: 5px 20px;
-				color: #333;
+				color: black;
 				border-radius: 5px;
 				-webkit-border-radius: 5px;
 				-moz-border-radius: 5px;
 				font-family: 'Open Sans', sans-serif;
+				font-weight: bold;
+			}
+
+			.tooltip .tooltip-bottom {
+				font-family: 'Open Sans', sans-serif;
+				font-size: 10px;
+			}
+
+			.tooltip .tooltip-inner {
+				font-family: 'Open Sans', sans-serif;
+				font-size: 15px;			
 			}
 
 			tr {
@@ -53,89 +60,66 @@
 		</style>
 	</head>
 	<body>
-		<img src="img/PI_BestPlacestoWork_2017.jpg" alt="Title Logo" style="float:left">
+		<iframe width="720" height="1450" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/26731098-my-new-infographic"></iframe>
 		<table id="example1" class="display" cellspacing="0" width="100%">
 		<thead>	
-			<tr><th>Company</th><th>Location</th><th>Category</th><th>No. of years won <br>between 2012-17</th></tr>	
+			<tr><th>Company</th><th>Location</th><th>Category</th><th>Number of years won,<br>2012-2017</th></tr>	
 		</thead>
 		<tbody>	
 				<tr><th>361 Capital</th><th>Denver</th><th>Small employers</th><th>2</th></tr>
 				<tr><th>AAM Insurance Investment Management</th><th>Chicago</th><th>Small employers</th><th>1</th></tr>
-				<tr><th>Abbott Capital Management</th><th></th><th>Small employers</th><th>1</th></tr>
-				<tr><th>Acadian Asset Management</th><th></th><th>Large employers</th><th>1</th></tr>
 				<tr><th>Adviser Investments</th><th>Newton</th><th>Medium employers</th><th>2</th></tr>
-				<tr><th>AEW Capital Management</th><th></th><th>Large employers</th><th>2</th></tr>
 				<tr><th>AFL-CIO Housing Investment Trust</th><th>Washington</th><th>Medium employers</th><th>1</th></tr>
 				<tr><th>Aksia</th><th>New York</th><th>Medium employers</th><th>3</th></tr>
 				<tr><th>AQR Capital Management</th><th>Greenwich</th><th>Major employers</th><th>1</th></tr>
 				<tr><th>Ariel Investments</th><th>Chicago</th><th>Medium employers</th><th>1</th></tr>
-				<tr><th>Arrowpoint Partners</th><th></th><th>Medium employers</th><th>2</th></tr>
-				<tr><th>Babson Capital Management</th><th></th><th>Large employers</th><th>3</th></tr>
 				<tr><th>Baird Asset Management</th><th>Milwaukee</th><th>Medium employers</th><th>6</th></tr>
 				<tr><th>Balentine</th><th>Atlanta</th><th>Small employers</th><th>4</th></tr>
 				<tr><th>Ballentine Partners, LLC</th><th>Waltham</th><th>Medium employers</th><th>1</th></tr>
 				<tr><th>The Blackstone Group</th><th>New York</th><th>Super employers</th><th>4</th></tr>
 				<tr><th>BlackRock Inc.</th><th>New York</th><th>Super employers</th><th>4</th></tr>
 				<tr><th>Brandywine Global Investment Management</th><th>Philadelphia</th><th>Large employers</th><th>3</th></tr>
-				<tr><th>Bridgewater Associates</th><th></th><th>Super employers</th><th>1</th></tr>
 				<tr><th>Bridgeway Capital Management</th><th>Houston</th><th>Small employers</th><th>3</th></tr>
 				<tr><th>California State Teachers' Retirement System</th><th>West Sacramento</th><th>Large employers</th><th>3</th></tr>
-				<tr><th>Caltius Capital Management</th><th></th><th>Small employers</th><th>1</th></tr>
 				<tr><th>Campbell & Co.</th><th>Baltimore</th><th>Large employers</th><th>3</th></tr>
 				<tr><th>Capital Investment Companies</th><th>Raleigh</th><th>Small employers</th><th>1</th></tr>
 				<tr><th>Cardinal Investment Advisors</th><th>Chicago</th><th>Small employers</th><th>3</th></tr>
-				<tr><th>Cassaday & Co.</th><th></th><th>Small employers</th><th>1</th></tr>
 				<tr><th>Charles Schwab Investment Management</th><th>San Francisco</th><th>Large employers</th><th>2</th></tr>
 				<tr><th>ClearBridge Investments</th><th>New York</th><th>Large employers</th><th>6</th></tr>
 				<tr><th>Cornerstone Advisors Asset Management, Inc.</th><th>Baltimore</th><th>Small employers</th><th>2</th></tr>
 				<tr><th>Cramer Rosenthal McGlynn, LLC</th><th>New York</th><th>Medium employers</th><th>1</th></tr>
-				<tr><th>Dana Investment Advisors</th><th></th><th>Small employers</th><th>6</th></tr>
-				<tr><th>Diversified</th><th></th><th>Super employers</th><th>1</th></tr>
+				<tr><th>Dana Investment Advisors</th><th>Wakesha, Wis</th><th>Small employers</th><th>6</th></tr>
 				<tr><th>DRA Advisors LLC</th><th>New York</th><th>Medium employers</th><th>1</th></tr>
-				<tr><th>Edelman Financial Services</th><th></th><th>Large employers</th><th>1</th></tr>
-				<tr><th>Falcon Investment Advisors</th><th></th><th>Small employers</th><th>1</th></tr>
-				<tr><th>Fiduciary Investment Advisors</th><th></th><th>Medium employers</th><th>3</th></tr>
+				<tr><th>Fiduciary Investment Advisors</th><th>Windsor, Conn.</th><th>Medium employers</th><th>3</th></tr>
 				<tr><th>Fort Washington Investment Advisors</th><th>Cincinnati</th><th>Large employers</th><th>4</th></tr>
 				<tr><th>Garcia Hamilton & Associates</th><th>Houston</th><th>Small employers</th><th>2</th></tr>
-				<tr><th>Hamilton Lane Advisors</th><th></th><th>Large employers</th><th>6</th></tr>
-				<tr><th>Harrison Street Real Estate Capital</th><th></th><th>Medium employers</th><th>4</th></tr>
-				<tr><th>Heitman</th><th></th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Hamilton Lane Advisors</th><th>Bala Cynwyd, Pa.</th><th>Large employers</th><th>6</th></tr>
+				<tr><th>Harrison Street Real Estate Capital</th><th>Chicago</th><th>Medium employers</th><th>4</th></tr>
 				<tr><th>Highland Associates</th><th>Birmingham</th><th>Small employers</th><th>2</th></tr>
 				<tr><th>Highland Capital Management</th><th>Dallas</th><th>Large employers</th><th>2</th></tr>
 				<tr><th>Income Research + Management</th><th>Boston</th><th>Large employers</th><th>2</th></tr>
 				<tr><th>Innovest Portfolio Solutions</th><th>Denver</th><th>Small employers</th><th>3</th></tr>
 				<tr><th>INTECH Investment Management</th><th>West Palm Beach</th><th>Medium employers</th><th>5</th></tr>
 				<tr><th>Intercontinental Real Estate Corporation</th><th>Boston</th><th>Large employers</th><th>2</th></tr>
-				<tr><th>Invesco</th><th></th><th>Super employers</th><th>4</th></tr>
-				<tr><th>L&B Realty Advisors</th><th></th><th>Small employers</th><th>1</th></tr>
 				<tr><th>LaSalle Investment Management</th><th>Chicago</th><th>Large employers</th><th>3</th></tr>
 				<tr><th>Legg Mason</th><th>Baltimore</th><th>Major employers</th><th>3</th></tr>
 				<tr><th>Los Angeles Capital Management</th><th>Los Angeles</th><th>Medium employers</th><th>4</th></tr>
-				<tr><th>Mesirow Financial Holdings</th><th></th><th>Super employers</th><th>2</th></tr>
 				<tr><th>Modera Wealth Management</th><th>Westwood</th><th>Medium employers</th><th>3</th></tr>
 				<tr><th>MRA Associates</th><th>Phoenix</th><th>Small employers</th><th>2</th></tr>
 				<tr><th>National Real Estate Advisors</th><th>Washington</th><th>Medium employers</th><th>3</th></tr>
 				<tr><th>Neuberger Berman Group</th><th>New York</th><th>Super employers</th><th>5</th></tr>
-				<tr><th>Northern Trust Asset Management</th><th></th><th>Major employers</th><th>2</th></tr>
 				<tr><th>OppenheimerFunds</th><th>New York</th><th>Super employers</th><th>2</th></tr>
-				<tr><th>Pacific Alternative Asset Management Co. </th><th></th><th>Small employers</th><th>2</th></tr>
 				<tr><th>Parnassus Investments</th><th>San Francisco</th><th>Small employers</th><th>1</th></tr>
 				<tr><th>Penserra</th><th>ORINDA</th><th>Small employers</th><th>1</th></tr>
-				<tr><th>Perkins Investment Management</th><th></th><th>Small employers</th><th>3</th></tr>
-				<tr><th>Polen Capital Management</th><th>Boca Raton</th><th>Small employers</th><th>2</th></tr>
 				<tr><th>Principal Global</th><th>Des Moines</th><th>Super employers</th><th>6</th></tr>
 				<tr><th>Resource Consulting Group</th><th>Orlando</th><th>Small employers</th><th>2</th></tr>
-				<tr><th>The Sanibel Captiva Trust Company</th><th></th><th>Small employers</th><th>1</th></tr>
-				<tr><th>Satori Capital</th><th></th><th>Small employers</th><th>3</th></tr>
+				<tr><th>Satori Capital</th><th>Dallas</th><th>Small employers</th><th>3</th></tr>
 				<tr><th>SEI Investments</th><th>Oaks</th><th>Super employers</th><th>5</th></tr>
 				<tr><th>Semper Capital Management</th><th>New York</th><th>Small employers</th><th>1</th></tr>
 				<tr><th>Spectrum Investment Advisors, Inc.</th><th>Mequon</th><th>Small employers</th><th>1</th></tr>
-				<tr><th>Standard Life Investment USA</th><th></th><th>Medium employers</th><th>3</th></tr>
-				<tr><th>SunTrust Institutional Investments</th><th></th><th>Medium employers</th><th>1</th></tr>
 				<tr><th>T. Rowe Price Associates Inc.</th><th>Baltimore</th><th>Super employers</th><th>2</th></tr>
 				<tr><th>TCW Group Inc.</th><th>Los Angeles</th><th>Major employers</th><th>4</th></tr>
 				<tr><th>Tortoise Capital Advisors</th><th>Leawood</th><th>Large employers</th><th>4</th></tr>
-				<tr><th>Transamerica Retirement Solutions</th><th></th><th>Super employers</th><th>2</th></tr>
 				<tr><th>Voya Investment Management</th><th>New York</th><th>Major employers</th><th>3</th></tr>
 				<tr><th>Vulcan Value Partners</th><th>Birmingham</th><th>Small employers</th><th>1</th></tr>
 				<tr><th>Western Asset Management</th><th>Pasadena</th><th>Major employers</th><th>5</th></tr>
@@ -156,11 +140,70 @@
 </div>
 
 	<script type="text/javascript">
-		var data = [
-		{
-			"name":"123"
-		}
-		];
+		var data = {
+			"361 Capital" : "2016, 2017",
+			"AAM Insurance Investment Management" : "2017",
+			"Adviser Investments" : "2016, 2017",
+			"AFL-CIO Housing Investment Trust" : "2017",
+			"Aksia" : "2015, 2016, 2017",
+			"AQR Capital Management" : "2017",
+			"Ariel Investments" : "2017",
+			"Baird Asset Management" : "2012, 2013, 2014, 2015, 2016, 2017",
+			"Balentine" : "2012, 2015, 2016, 2017",
+			"Ballentine Partners, LLC" : "2017",
+			"The Blackstone Group" : "2013, 2014, 2015, 2017",
+			"BlackRock Inc." : "2014, 2015, 2016, 2017",
+			"Brandywine Global Investment Management" : "2013, 2016, 2017",
+			"Bridgeway Capital Management" : "2014, 2015, 2017",
+			"California State Teachers' Retirement System" : "2013, 2016, 2017",
+			"Campbell & Co." : "2015, 2016, 2017",
+			"Capital Investment Companies" : "2017",
+			"Cardinal Investment Advisors" : "2015, 2016, 2017",
+			"Charles Schwab Investment Management" : "2016, 2017",
+			"ClearBridge Investments" : "2012, 2013, 2014, 2015, 2016, 2017",
+			"Cornerstone Advisors Asset Management, Inc." : "2016, 2017",
+			"Cramer Rosenthal McGlynn, LLC" : "2017",
+			"Dana Investment Advisors" : "2012, 2013, 2014, 2015, 2016, 2017",
+			"DRA Advisors LLC" : "2017",
+			"Fiduciary Investment Advisors" : "2015, 2016, 2017",
+			"Fort Washington Investment Advisors" : "2013, 2014, 2016, 2017",
+			"Garcia Hamilton & Associates" : "2016, 2017",
+			"Hamilton Lane Advisors" : "2012, 2013, 2014, 2015, 2016, 2017",
+			"Harrison Street Real Estate Capital" : "2014, 2015, 2016, 2017",
+			"Highland Associates" : "2016, 2017",
+			"Highland Capital Management" : "2014, 2017",
+			"Income Research + Management" : "2016, 2017",
+			"Innovest Portfolio Solutions" : "2014, 2016, 2017",
+			"INTECH Investment Management" : "2013, 2014, 2015, 2016, 2017",
+			"Intercontinental Real Estate Corporation" : "2016, 2017",
+			"LaSalle Investment Management" : "2013, 2016, 2017",
+			"Legg Mason" : "2015, 2016, 2017",
+			"Los Angeles Capital Management" : "2014, 2015, 2016, 2017",
+			"Modera Wealth Management" : "2012, 2016, 2017",
+			"MRA Associates" : "2016, 2017",
+			"National Real Estate Advisors" : "2014, 2016, 2017",
+			"Neuberger Berman Group" : "2013, 2014, 2015, 2016, 2017",
+			"OppenheimerFunds" : "2016, 2017",
+			"Parnassus Investments" : "2017",
+			"Penserra" : "2017",
+			"Polen Capital Management" : "2016, 2017",
+			"Principal Global" : "2012, 2013, 2014, 2015, 2016, 2017",
+			"Resource Consulting Group" : "2016, 2017",
+			"Satori Capital" : "2015, 2016, 2017",
+			"SEI Investments" : "2012, 2013, 2015, 2016, 2017",
+			"Semper Capital Management" : "2017",
+			"Spectrum Investment Advisors, Inc." : "2017",
+			"T. Rowe Price Associates Inc." : "2015, 2017",
+			"TCW Group Inc." : "2014, 2015, 2016, 2017",
+			"Tortoise Capital Advisors" : "2014, 2015, 2016, 2017",
+			"Voya Investment Management" : "2015, 2016, 2017",
+			"Vulcan Value Partners" : "2017",
+			"Western Asset Management" : "2012, 2014, 2015, 2016, 2017",
+			"Westwood Holdings Group Inc." : "2014, 2015, 2016, 2017",
+			"WisdomTree Asset Management" : "2015, 2016, 2017",
+			"William Blair Investment Management" : "2012, 2013, 2015, 2016, 2017"
+		};
+
 	    $('#example1 tbody tr').each( function() {
 	        var sTitle;
 	        var nTds = $('th', this);
@@ -168,10 +211,7 @@
 	        console.log("print  companyName" + companyName);
 	        var sGrade = $(nTds[4]).text();
 	         
-	        if ( companyName == "361 Capital" )
-	            sTitle =  'Winning years : 2016, 2017';
-	        else
-	            sTitle = ' will provide an undefined level of CSS support.';
+	        sTitle =  'Winning years : ' + data[companyName];
 	         
 	        this.setAttribute( 'title', sTitle );
     	} );
