--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</style>
 	</head>
 	<body>
-		<iframe width="720" height="1900" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/26731098-my-new-infographic"></iframe>
+		<iframe width="720" height="2200" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/26731098-my-new-infographic"></iframe>
 		<table id="example1" class="display" cellspacing="0" width="100%">
 		<thead>	
 			<tr><th>Company</th><th>Location</th><th>Category</th><th>Number of years won,<br>2012-2017</th></tr>	
@@ -68,61 +68,61 @@
 		<tbody>	
 				<tr><th>361 Capital</th><th>Denver</th><th>Small employers</th><th>2</th></tr>
 				<tr><th>AAM Insurance Investment Management</th><th>Chicago</th><th>Small employers</th><th>1</th></tr>
-				<tr><th>Adviser Investments</th><th>Newton</th><th>Medium employers</th><th>2</th></tr>
+				<tr><th>Adviser Investments</th><th>Newton, Mass.</th><th>Medium employers</th><th>2</th></tr>
 				<tr><th>AFL-CIO Housing Investment Trust</th><th>Washington</th><th>Medium employers</th><th>1</th></tr>
 				<tr><th>Aksia</th><th>New York</th><th>Medium employers</th><th>3</th></tr>
-				<tr><th>AQR Capital Management</th><th>Greenwich</th><th>Major employers</th><th>1</th></tr>
+				<tr><th>AQR Capital Management</th><th>Greenwich, Conn.</th><th>Major employers</th><th>1</th></tr>
 				<tr><th>Ariel Investments</th><th>Chicago</th><th>Medium employers</th><th>1</th></tr>
 				<tr><th>Baird Asset Management</th><th>Milwaukee</th><th>Medium employers</th><th>6</th></tr>
 				<tr><th>Balentine</th><th>Atlanta</th><th>Small employers</th><th>4</th></tr>
-				<tr><th>Ballentine Partners, LLC</th><th>Waltham</th><th>Medium employers</th><th>1</th></tr>
+				<tr><th>Ballentine Partners LLC</th><th>Waltham, Mass.</th><th>Medium employers</th><th>1</th></tr>
 				<tr><th>The Blackstone Group</th><th>New York</th><th>Super employers</th><th>4</th></tr>
 				<tr><th>BlackRock Inc.</th><th>New York</th><th>Super employers</th><th>4</th></tr>
 				<tr><th>Brandywine Global Investment Management</th><th>Philadelphia</th><th>Large employers</th><th>3</th></tr>
 				<tr><th>Bridgeway Capital Management</th><th>Houston</th><th>Small employers</th><th>3</th></tr>
 				<tr><th>California State Teachers' Retirement System</th><th>West Sacramento</th><th>Large employers</th><th>3</th></tr>
 				<tr><th>Campbell & Co.</th><th>Baltimore</th><th>Large employers</th><th>3</th></tr>
-				<tr><th>Capital Investment Companies</th><th>Raleigh</th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Capital Investment Companies</th><th>Raleigh, N.C.</th><th>Small employers</th><th>1</th></tr>
 				<tr><th>Cardinal Investment Advisors</th><th>Chicago</th><th>Small employers</th><th>3</th></tr>
 				<tr><th>Charles Schwab Investment Management</th><th>San Francisco</th><th>Large employers</th><th>2</th></tr>
 				<tr><th>ClearBridge Investments</th><th>New York</th><th>Large employers</th><th>6</th></tr>
-				<tr><th>Cornerstone Advisors Asset Management, Inc.</th><th>Baltimore</th><th>Small employers</th><th>2</th></tr>
-				<tr><th>Cramer Rosenthal McGlynn, LLC</th><th>New York</th><th>Medium employers</th><th>1</th></tr>
-				<tr><th>Dana Investment Advisors</th><th>Wakesha, Wis</th><th>Small employers</th><th>6</th></tr>
+				<tr><th>Cornerstone Advisors Asset Management Inc.</th><th>Baltimore</th><th>Small employers</th><th>2</th></tr>
+				<tr><th>Cramer Rosenthal McGlynn LLC</th><th>New York</th><th>Medium employers</th><th>1</th></tr>
+				<tr><th>Dana Investment Advisors</th><th>Waukesha, Wis.</th><th>Small employers</th><th>6</th></tr>
 				<tr><th>DRA Advisors LLC</th><th>New York</th><th>Medium employers</th><th>1</th></tr>
 				<tr><th>Fiduciary Investment Advisors</th><th>Windsor, Conn.</th><th>Medium employers</th><th>3</th></tr>
 				<tr><th>Fort Washington Investment Advisors</th><th>Cincinnati</th><th>Large employers</th><th>4</th></tr>
 				<tr><th>Garcia Hamilton & Associates</th><th>Houston</th><th>Small employers</th><th>2</th></tr>
 				<tr><th>Hamilton Lane Advisors</th><th>Bala Cynwyd, Pa.</th><th>Large employers</th><th>6</th></tr>
 				<tr><th>Harrison Street Real Estate Capital</th><th>Chicago</th><th>Medium employers</th><th>4</th></tr>
-				<tr><th>Highland Associates</th><th>Birmingham</th><th>Small employers</th><th>2</th></tr>
+				<tr><th>Highland Associates</th><th>Birmingham, Ala.</th><th>Small employers</th><th>2</th></tr>
 				<tr><th>Highland Capital Management</th><th>Dallas</th><th>Large employers</th><th>2</th></tr>
-				<tr><th>Income Research + Management</th><th>Boston</th><th>Large employers</th><th>2</th></tr>
+				<tr><th>Income Research & Management</th><th>Boston</th><th>Large employers</th><th>2</th></tr>
 				<tr><th>Innovest Portfolio Solutions</th><th>Denver</th><th>Small employers</th><th>3</th></tr>
-				<tr><th>INTECH Investment Management</th><th>West Palm Beach</th><th>Medium employers</th><th>5</th></tr>
-				<tr><th>Intercontinental Real Estate Corporation</th><th>Boston</th><th>Large employers</th><th>2</th></tr>
+				<tr><th>INTECH Investment Management</th><th>West Palm Beach, Fla.</th><th>Medium employers</th><th>5</th></tr>
+				<tr><th>Intercontinental Real Estate Corp.</th><th>Boston</th><th>Large employers</th><th>2</th></tr>
 				<tr><th>LaSalle Investment Management</th><th>Chicago</th><th>Large employers</th><th>3</th></tr>
 				<tr><th>Legg Mason</th><th>Baltimore</th><th>Major employers</th><th>3</th></tr>
 				<tr><th>Los Angeles Capital Management</th><th>Los Angeles</th><th>Medium employers</th><th>4</th></tr>
-				<tr><th>Modera Wealth Management</th><th>Westwood</th><th>Medium employers</th><th>3</th></tr>
+				<tr><th>Modera Wealth Management</th><th>Westwood, N.J.</th><th>Medium employers</th><th>3</th></tr>
 				<tr><th>MRA Associates</th><th>Phoenix</th><th>Small employers</th><th>2</th></tr>
 				<tr><th>National Real Estate Advisors</th><th>Washington</th><th>Medium employers</th><th>3</th></tr>
 				<tr><th>Neuberger Berman Group</th><th>New York</th><th>Super employers</th><th>5</th></tr>
 				<tr><th>OppenheimerFunds</th><th>New York</th><th>Super employers</th><th>2</th></tr>
 				<tr><th>Parnassus Investments</th><th>San Francisco</th><th>Small employers</th><th>1</th></tr>
-				<tr><th>Penserra</th><th>ORINDA</th><th>Small employers</th><th>1</th></tr>
-				<tr><th>Principal Global</th><th>Des Moines</th><th>Super employers</th><th>6</th></tr>
-				<tr><th>Resource Consulting Group</th><th>Orlando</th><th>Small employers</th><th>2</th></tr>
+				<tr><th>Penserra</th><th>Orinda, Calif.</th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Principal Global</th><th>Des Moines, Iowa</th><th>Super employers</th><th>6</th></tr>
+				<tr><th>Resource Consulting Group</th><th>Orlando, Fla.</th><th>Small employers</th><th>2</th></tr>
 				<tr><th>Satori Capital</th><th>Dallas</th><th>Small employers</th><th>3</th></tr>
-				<tr><th>SEI Investments</th><th>Oaks</th><th>Super employers</th><th>5</th></tr>
+				<tr><th>SEI Investments</th><th>Oaks, Pa.</th><th>Super employers</th><th>5</th></tr>
 				<tr><th>Semper Capital Management</th><th>New York</th><th>Small employers</th><th>1</th></tr>
-				<tr><th>Spectrum Investment Advisors, Inc.</th><th>Mequon</th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Spectrum Investment Advisors Inc.</th><th>Mequon, Wis.</th><th>Small employers</th><th>1</th></tr>
 				<tr><th>T. Rowe Price Associates Inc.</th><th>Baltimore</th><th>Super employers</th><th>2</th></tr>
 				<tr><th>TCW Group Inc.</th><th>Los Angeles</th><th>Major employers</th><th>4</th></tr>
-				<tr><th>Tortoise Capital Advisors</th><th>Leawood</th><th>Large employers</th><th>4</th></tr>
+				<tr><th>Tortoise</th><th>Leawood, Kan.</th><th>Large employers</th><th>4</th></tr>
 				<tr><th>Voya Investment Management</th><th>New York</th><th>Major employers</th><th>3</th></tr>
-				<tr><th>Vulcan Value Partners</th><th>Birmingham</th><th>Small employers</th><th>1</th></tr>
-				<tr><th>Western Asset Management</th><th>Pasadena</th><th>Major employers</th><th>5</th></tr>
+				<tr><th>Vulcan Value Partners</th><th>Birmingham, Ala.</th><th>Small employers</th><th>1</th></tr>
+				<tr><th>Western Asset Management</th><th>Pasadena, Calif.</th><th>Major employers</th><th>5</th></tr>
 				<tr><th>Westwood Holdings Group Inc.</th><th>Dallas</th><th>Large employers</th><th>4</th></tr>
 				<tr><th>WisdomTree Asset Management</th><th>New York</th><th>Large employers</th><th>3</th></tr>
 				<tr><th>William Blair Investment Management</th><th>Chicago</th><th>Large employers</th><th>5</th></tr>	
